Added author endpoints and swagger comments.
