# docs/app/swagger.yaml
@@ -107,6 +107,188 @@ info:
   title: Swagger Book Library API
   version: "1.0"
 paths:
+  /authors:
+    get:
+      consumes:
+      - application/json
+      description: Return author collection
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: Limit number
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: Author relationships:books
+        in: query
+        name: relations
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Author'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Get author collection
+      tags:
+      - author
+    post:
+      consumes:
+      - application/json
+      description: Create new author and return it
+      parameters:
+      - description: Create author model
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.Author'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Author'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Create new author
+      tags:
+      - author
+  /authors/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete author by id
+      parameters:
+      - description: author id
+        in: path
+        name: request
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Author'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+      summary: Delete author
+      tags:
+      - author
+    get:
+      consumes:
+      - application/json
+      description: Return author
+      parameters:
+      - description: Author id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Author relationships:books
+        in: query
+        name: relations
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Author'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Get author by id
+      tags:
+      - author
+    patch:
+      consumes:
+      - application/json
+      description: Update author and return it
+      parameters:
+      - description: author id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update author model
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.Author'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Author'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Update author
+      tags:
+      - author
   /books:
     get:
       consumes:
@@ -151,7 +333,70 @@ paths:
       summary: Get book collection
       tags:
       - books
+    post:
+      consumes:
+      - application/json
+      description: Create new book and return it
+      parameters:
+      - description: Create book model
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.Book'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Create new book
+      tags:
+      - books
   /books/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete book by id
+      parameters:
+      - description: Book id
+        in: path
+        name: request
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+      summary: Delete book
+      tags:
+      - books
     get:
       consumes:
       - application/json
@@ -186,6 +431,44 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get book by id
+      tags:
+      - books
+    patch:
+      consumes:
+      - application/json
+      description: Update book and return it
+      parameters:
+      - description: Book id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update book model
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.Book'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Book'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Update book
       tags:
       - books
   /signIn:
